<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".BarVolume">

    <TextView
        android:id="@+id/tv_barVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perhitungan_volume_bar"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_panjang"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_lebar"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_tinggi"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hitung"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="hasil muncul di sini"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        />

</LinearLayout>